# cgc1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build_test.py  doxygen.conf  format  format.py  generate.py  license.txt  platform_notes.md  process_gcov.py  rm_gcda.sh  sanitizer-thread-suppressions.txt  settings.json.example  setup.cmake  test.py  tidy.py  tidy.sh  utilities.py
cgc1/: CMakeLists.txt
cgc1/include/: gc.h
cgc1/include/cgc1/: aligned_allocator.hpp  allocated_thread.hpp  allocated_thread_timpl.hpp  cgc1.hpp  cgc1_dll.hpp  cgc_internal_malloc_allocator.hpp  cgc_root.hpp  cgc_root_pointer.hpp  clang_concurrency.hpp  concurrency.hpp  concurrency_apple.hpp  condition_variable.hpp  condition_variable_impl.hpp  declarations.hpp  gc.h  gc_allocator.hpp  hide_pointer.hpp  memory_range.hpp  memory_range_impl.hpp  posix.hpp  posix_slab.hpp  posix_slab_impl.hpp  thread_local_pointer.hpp  warning_wrapper_push.hpp  win32_slab.hpp  win32_slab_impl.hpp
cgc1/include/cgc1/boost/property_tree/: json_parser.hpp  ptree.hpp
cgc1/include/gc/: gc.h  gc_allocator.h  gc_cpp.h  gc_version.h
cgc1/src/: allocator.hpp  allocator_block.hpp  allocator_block_handle.hpp  allocator_block_impl.hpp  allocator_block_set.hpp  allocator_block_set_impl.hpp  allocator_impl.hpp  bitmap_allocator.hpp  bitmap_finalization.cpp  bitmap_gc_user_data.hpp  gc_allocator.cpp  gc_allocator.hpp  gc_allocator_impl.hpp  gc_thread.cpp  gc_thread.hpp  gc_user_data.hpp  gc_user_data_impl.hpp  global_kernel_state.cpp  global_kernel_state.hpp  global_kernel_state_impl.hpp  global_kernel_state_param.cpp  global_kernel_state_param.hpp  integer_block.hpp  integer_block_impl.hpp  internal_allocator.hpp  internal_declarations.hpp  internal_stream.hpp  kernel.cpp  new.cpp  new.hpp  object_state.hpp  object_state_impl.hpp  packed_object_allocator.cpp  packed_object_allocator.hpp  packed_object_allocator_impl.hpp  packed_object_allocator_inlines.hpp  packed_object_package.cpp  packed_object_package.hpp  packed_object_package_impl.hpp  packed_object_package_timpl.hpp  (+24 more)
cgc1_alloc_benchmark/: CMakeLists.txt  main.cpp  main_thread.cpp
cgc1_test/: CMakeLists.txt  allocator_block_set_tests.cpp  allocator_block_tests.cpp  allocator_tests.cpp  bandit.hpp  bitmap_allocator_tests.cpp  gc_sparse_allocator_tests.cpp  gc_tests.cpp  main.cpp  packed_object.cpp  slab_allocator.cpp
mcppalloc/: CMakeLists.txt
mcppalloc/mcppalloc/include/mcppalloc/: allocator_policy.hpp  allocator_thread_policy.hpp  block.hpp  declarations.hpp  default_allocator_policy.hpp  default_allocator_thread_policy.hpp  object_state.hpp  object_state_impl.hpp  user_data_base.hpp
mcppalloc_bitmap/: CMakeLists.txt
mcppalloc_bitmap/mcppalloc_bitmap/: CMakeLists.txt
mcppalloc_bitmap/mcppalloc_bitmap/include/mcppalloc/mcppalloc_bitmap/: dynamic_bitmap.hpp  dynamic_bitmap_impl.hpp  dynamic_bitmap_ref.hpp  dynamic_bitmap_ref_impl.hpp  integer_block.hpp  integer_block_impl.hpp
mcppalloc_bitmap/mcppalloc_bitmap/include/mcppalloc_bitmap/: integer_block_impl.hpp
mcppalloc_bitmap_allocator/: CMakeLists.txt
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator/: CMakeLists.txt
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator/include/mcppalloc/mcppalloc_bitmap_allocator/: bitmap_allocator.hpp  (+10 more)
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator/include/mcppalloc_bitmap_allocator/: bitmap_allocator.hpp  bitmap_allocator_impl.hpp  bitmap_package.hpp  bitmap_package_impl.hpp  bitmap_state.hpp  bitmap_state_impl.hpp  bitmap_thread_allocator.hpp  bitmap_thread_allocator_impl.hpp  declarations.hpp
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator_test/: CMakeLists.txt  bitmap.cpp  main.cpp
mcppalloc_slab_allocator/: CMakeLists.txt
mcppalloc_slab_allocator/mcppalloc_slab_allocator/: CMakeLists.txt
mcppalloc_slab_allocator/mcppalloc_slab_allocator/include/mcppalloc/mcppalloc_slab_allocator/: slab_allocator.hpp  slab_allocator_dll.hpp  slab_allocator_impl.hpp  slab_allocator_inlines.hpp
mcppalloc_slab_allocator/mcppalloc_slab_allocator/include/mcppalloc_slab_allocator/: slab_allocator.hpp  slab_allocator_impl.hpp
mcppalloc_slab_allocator/mcppalloc_slab_allocator/src/: slab_allocator.cpp
mcppalloc_sparse/: CMakeLists.txt
mcppalloc_sparse/include/mcppalloc_sparse/: allocator.hpp  allocator_block.hpp  allocator_block_handle.hpp  allocator_block_impl.hpp  allocator_block_set.hpp  allocator_impl.hpp  allocator_policy.hpp  allocator_thread_policy.hpp  declarations.hpp  default_allocator_policy.hpp  default_allocator_thread_policy.hpp  object_state.cpp  object_state.hpp  object_state_impl.hpp  thread_allocator.hpp  thread_allocator_abs_data.hpp  thread_allocator_impl.hpp  user_data_base.hpp
mcppalloc_sparse/mcppalloc_sparse/: CMakeLists.txt
mcppalloc_sparse/mcppalloc_sparse/include/mcppalloc_sparse/: allocator.hpp  allocator_block.hpp  allocator_block_impl.hpp  allocator_block_set.hpp  allocator_block_set_impl.hpp  allocator_impl.hpp  thread_allocator.hpp  thread_allocator_abs_data_impl.hpp  thread_allocator_impl.hpp
mcppalloc_sparse/mcppalloc_sparse_test/: CMakeLists.txt  allocator_block_set_tests.cpp  allocator_block_tests.cpp  allocator_tests.cpp  main.cpp  slab_allocator.cpp
mcppalloc_sparse_test/: CMakeLists.txt  allocator_block_set_tests.cpp  allocator_block_tests.cpp  allocator_tests.cpp  main.cpp
mcppalloc_utils/: CMakeLists.txt
mcppalloc_utils/include/mcppalloc_utils/: aligned_allocator.hpp  alignment.hpp  clang_concurrency.hpp  concurrency_apple.hpp  condition_variable_impl.hpp  container.hpp  container_functions.hpp  declarations.hpp  make_unique.hpp  memory_range.hpp  memory_range_impl.hpp  to_json.hpp
mcppalloc_utils/mcppalloc_utils/: CMakeLists.txt
mcppalloc_utils/mcppalloc_utils/include/mcppalloc_utils/: bandit.hpp  concurrency.hpp  concurrency_apple.hpp  container.hpp  declarations.hpp  function_iterator.hpp  iterator.hpp  memory_range_impl.hpp  posix_slab.hpp  security.hpp  std.hpp  unsafe_cast.hpp  warning_wrapper_pop.hpp
mcppalloc_utils/mcppalloc_utils_test/: CMakeLists.txt  main.cpp
(+44 files in other folders)
