cmake_minimum_required(VERSION 2.8.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
include (mcpputil/setup.cmake)
include_directories(GSL)
add_subdirectory(mcpputil/mcpputil)
add_subdirectory(mcpputil/mcpputil_test)
add_subdirectory(mcpposutil/mcpposutil/mcpposutil)
add_subdirectory(mcpposutil/mcpposutil/mcpposutil_test)
add_subdirectory(mcppalloc)
add_subdirectory(mcppalloc_slab_allocator)
add_subdirectory(mcppalloc_sparse)
add_subdirectory(mcppalloc_bitmap)
add_subdirectory(mcppalloc_bitmap_allocator)
add_subdirectory(cgc1)
add_subdirectory(cgc1_test)
add_subdirectory(cgc1_alloc_benchmark)
