cmake_minimum_required(VERSION 2.8.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
include (mcpputil/setup.cmake)
find_path(GSL_INCLUDE_PATH gsl/gsl PATHS GSL/)
include_directories(${GSL_INCLUDE_PATH})
add_subdirectory(mcpputil)
add_subdirectory(mcpposutil/mcpposutil/mcpposutil)
add_subdirectory(mcpposutil/mcpposutil/mcpposutil_test)
find_path(MCPPUTIL_INCLUDE_PATH mcpputil/mcpputil/declarations.hpp PATHS mcpputil/mcpputil/include/)
add_subdirectory(mcppalloc)
add_subdirectory(cgc1)
add_subdirectory(cgc1_test)
add_subdirectory(cgc1_alloc_benchmark)
